--- a/app/views/billings/index.html.erb
+++ b/app/views/billings/index.html.erb
@@ -3,20 +3,18 @@
   
 <h1> Billings for <%= date.to_s %> (<%= @visits.count %>)</h1>
 
-<ul class="users">
-<table class="tbl"> <!--class="table table-hover table-condensed" > -->
+<table class="tbl table-hover"> <!--class="table table-hover table-condensed" > -->
   <thead>
       <tr>
 	  <th class="tbl_lsm">Time</th>
           <th class="tbl_md">Doctor</th>
 	  <th class="tbl_lsm">Visit Id</th>
-          <th class="tbl_lg">Patient</th>
+          <th class="tbl_lmd">Patient</th>
           <th class="tbl_md">Health #</th>
           <th class="tbl_sm">Ver</th>
           <th class="tbl_lmd">Procedure(s)</th>
-          <th class="tbl_sm">Duration</th>
           <th class="tbl_md">Diagnosis</th>
-          <th class="tbl_sm">Ttl. Fee</th>
+          <th class="tbl_xmd">Ttl. Fee</th>
           <th class="tbl_sm">Status</th>
 	  <th class="tbl_sm">Entry By</th>
       </tr>
@@ -26,16 +24,15 @@
 	  
   </tbody>
 </table>
-</ul>
 
 <%= will_paginate(@visits) %> 
 
-<div class='row'>
-	  <div class="col-md-2 col-md-offset-0">
-	  <%= button_to "Export Payment File (CSV)", billings_export_csv_path, class: "btn btn-primary", method: 'post', params: {date: date}  %>
-	  </div>
-
-	  <div class="col-md-2 col-md-offset-1">
-	  <%= button_to "Export Payment File (HCP)", billings_export_edt_path, class: "btn btn-primary", method: 'post', params: {date: date}  %>
-	  </div>
+<div class="bottom_buttons">
+<div class="col-md-2 col-md-offset-0">
+	<% if BILLING_FORMAT == 'EDT' %>
+	  <%= button_to "Export Claim File (EDT)", billings_export_edt_path, class: "btn btn-primary", method: 'post', params: {date: date}  %>
+        <% else %>
+	  <%= button_to "Export Claim File (CSV)", billings_export_csv_path, class: "btn btn-primary", method: 'post', params: {date: date}  %>
+        <% end %>
+</div>
 </div>
