--- a/app/views/doctors/new.html.erb
+++ b/app/views/doctors/new.html.erb
@@ -2,4 +2,10 @@
 <% provide(:button_text, 'Save') %>
 <h1>New Doctor </h1>
 
-    <%= render 'form' %>
+<div class="row justify-content-md-center">
+	<div class="col-md-10 col-md-offset-1">
+
+	<%= render 'form' %>
+
+	</div>
+</div>
