--- a/app/views/patients/edit.html.erb
+++ b/app/views/patients/edit.html.erb
@@ -2,4 +2,10 @@
 <% provide(:button_text, "Update Patient's Record") %>
 <h1><%= @patient.full_name  %> : patient's profile</h1>
 
-<%= render 'form' %>
+<div class="row justify-content-md-center">
+	<div class="col-md-10 col-md-offset-1">
+
+	<%= render 'form' %>
+
+	</div>
+</div>
