--- a/app/views/procedures/edit.html.erb
+++ b/app/views/procedures/edit.html.erb
@@ -2,5 +2,11 @@
 <% provide(:button_text, 'Save changes') %>
 <h1>Edit procedure</h1>
 
+<div class="row justify-content-md-center">
+  <div class="col-md-10 col-md-offset-2">
+
 <%= render 'form' %>
+
+  </div>
+</div>
 
