--- a/app/views/visits/show.html.erb
+++ b/app/views/visits/show.html.erb
@@ -6,7 +6,7 @@
 <% diag = Diagnosis.find_by(code: @visit.diag_code) %>
 <% codes = [@visit.proc_code, @visit.proc_code2, @visit.proc_code3, @visit.proc_code4] %>
 <div class="row">
-  <aside class="col-md-6">
+  <aside class="col-md-6 col-md-offset-3">
     <section class="user_info">
       <h1>
 	   <pre>
