--- a/app/views/daysheet/_set_doctor.html.erb
+++ b/app/views/daysheet/_set_doctor.html.erb
@@ -1,10 +1,8 @@
-
-<table>
-  <tr>
-    <td>
+<h1> Assign Doctor </h1>
+<div class="bottom_buttons">
+    <div class="col-md-4 col-md-offset-4">
 <%= form_with url: daysheet_index_path do |f| %>
-	<%= f.collection_select(:doc_id, get_active_doctors, :id, :lname, {prompt: 'Assign Doctor for Next Shift'}, {onchange: "this.form.submit()"} ) %>
+	<%= f.collection_select(:doc_id, get_active_doctors, :id, :lname, {prompt: 'Please assign doctor for this shift'}, {onchange: "this.form.submit()"} ) %>
 <% end %>
-   </td>
-  </tr>
-</table>
+  </div>
+</div>
