--- a/app/views/daysheet/index.html.erb
+++ b/app/views/daysheet/index.html.erb
@@ -2,46 +2,41 @@
 <% provide(:title, "Day Sheet for " + date.to_s  ) %>
 <% provide(:button_text, 'Save changes') %>
 
-<% if date.today? %>
-	<% doc_name = current_doctor.lname rescue '' %>
-	<% suffix = 'Current doctor: ' + doc_name %>
+<% if current_doctor && date == Date.today%>
+	<div id="doc_in"><small>Doctor in: Dr. <b><%= current_doctor.lname rescue '' %></b>  Est. Wait: <b><%= current_wait_time %></b> min.</small></div>
 <% end %>
 
 <% if @daysheet.count >0 %>
-		   <h1> Visits for <%= date.to_s  %> (<%= @daysheet.count %>)  <%= suffix %> </h1> 
+	<h1> Visits for <%= date.to_s  %> (<%= @daysheet.count %>) </h1>
 
-<ul class="users">
-<table class="tbl" >
+<table class="tbl table-hover" >
   <thead>
       <tr>
 	  <th class="tbl_sm">Time</th>
+          <th class="tbl_md">Doctor</th>
           <th class="tbl_md">Patient</th>
           <th class="tbl_lsm">Health #</th>
-          <th class="tbl_xs">Ver.</th>
-          <th class="tbl_sm">Doctor</th>
-          <th class="tbl_sm">Diagnosis</th>
+          <th class="tbl_lsm">Ver.</th>
+          <th class="tbl_xmd">Diagnosis</th>
           <th class="tbl_xmd">Procedures</th>
-          <th class="tbl_xs">Units</th>
-          <th class="tbl_xs">Type</th>
+          <th class="tbl_sm">Units</th>
+          <th class="tbl_sm">Type</th>
           <th class="tbl_sm">Status</th>
+          <% if current_user.admin?  %>
           <th class="tbl_sm"> </th>
+  	  <% end %>
       </tr>
   </thead>
   <tbody>
 
   <% @daysheet.each do |v| %>
      <%= render 'visit', visit: v %>
-     <%# render 'visits/visit', visit: v %>
   <% end %>
 
   </tbody>
 </table>
-</ul>
-<p>
+
 <%= will_paginate(@daysheet) %>
 
 <% end %>
 
-<% if date.today? && !current_doctor %>
-   <%= render 'set_doctor' %> 
-<% end %>
