--- a/app/views/doctors/edit.html.erb
+++ b/app/views/doctors/edit.html.erb
@@ -3,4 +3,10 @@
 
 <h1>Update doctor's profile</h1>
 
+<div class="row justify-content-md-center">
+  <div class="col-md-10 col-md-offset-1">
+
 <%= render 'form' %>
+
+  </div>
+</div>
