--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,14 +1,14 @@
-<footer class="footer">
+<footer>
   <small>
-	  The <a href="<%= project_url %>"><%= full_title %></a> project
-    by <a href="project_url">Dmitri Ostapenko</a>
+    The <a href="<%= project_url %>"><%= full_title %></a> project
+    by <a href="project_url">Stoney Creek Walk In Clinic</a> - All rights reserved
   </small>
   <nav>
     <ul>
-      <li><%= link_to "About",   about_path %></li>
-       <li><%= link_to "Help", help_path %></li>
-      <li><%= link_to "Contact", contact_path %></li>
-      <li><a href="<%= project_url  %>">News</a></li>
+      <li><small><%= link_to "About",   about_path %></small></li>
+      <li><small><%= link_to "Help", help_path %></small></li>
+      <li><small><%= link_to "Contact", contact_path %></small></li>
+      <li><small><%= link_to "News", news_path %></small></li>
     </ul>
   </nav>
 </footer>
