--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-   <div id="container" class="container">
+   <div  class="container">
     <div id="header"> 
     <%= render 'layouts/header' %>
     </div>
@@ -20,9 +20,10 @@
     </div>
 
     <div id="footer">
-      <%= render 'layouts/footer' %>
-      <%= debug(params) if Rails.env.development? %>
+      <%= render 'layouts/footer' if device_type == 'desktop'  %>
+      <%= debug(params) if DEBUG_FLAG > 0 %>
     </div>
+
    </div>
   
   </body>
