--- a/app/views/patients/new.html.erb
+++ b/app/views/patients/new.html.erb
@@ -2,4 +2,10 @@
 <% provide(:button_text, "Save Patient's record") %>
 <h1>Sign up</h1>
 
-    <%= render 'form' %>
+<div class="row justify-content-md-center">
+	<div class="col-md-10 col-md-offset-1">
+	
+    	<%= render 'form' %>
+
+	</div>
+</div>
