--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -6,7 +6,7 @@
   <aside class="col-md-6">
     <section class="user_info">
       <h1>
-	   <pre>
+	   <pre class="pre-scrollable">
 	<b>Name:</b> <%= @patient.full_name %> <b>Type:</b> <%= @patient.pat_type %>
 	<b>DOB:</b> <%= @patient.dob %> : <%= @patient.age %> y/o  <%= @patient.sex %>
 	<b>Health Card:</b> <%= @patient.ohip_num %> <%= @patient.ohip_ver %> (<%= @patient.hin_prov %>) <b>Expires:</b> <%= @patient.hin_expiry %>
