--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Contact') %>
 <h1>Contact</h1>
 <p>
-Contact page for <%= full_title %> project 
+Please contact <a href="mailto:dosta@me.com?subject=WALKIN_Inquiry&cc=ostadim1@gmail.com">Dmitri Ostapenko</a> if you have any questions or concerns about this website
 </p>
