--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,18 +1,30 @@
 
-  <h2>
+  <h1>
     This is the home page for the
     <a href="<%= project_url  %>">Walk In EMR</a> project 
-  </h2>
+  </h1>
 
-  Walk-In web app is basic EMR intended to replace now defunct Health Screen EMR.  
-  Built using Ruby on Rails with Postgres SQL back end, Walk-In EMR is simple to use, is tailored to walk-in clinic setting and provides basic functionality of any EMR system including:
+  Walk-In EMR web app is no-frills electronic medical records solution created to replace now defunct, functionally similar package from Health Screen Solutions.  
+  Built using Ruby on Rails with Postgres SQL back end, Walk-In EMR is easy to use, tailored to busy walk-in clinic setting, and provides all basic functions of any EMR system including:
 
-   <ul>
-	   <li>Patient management</li>
-
-	   <li>Patient search by last name/health card humber</li>
-	   <li>Visit management</li>
-	   <li>Doctor management</li>
-   </ul>
-
-
+  <ul>
+   <dl>
+    <dt>Patient management</dt>
+    <dd>- You can easily add and modify patients records using many available fields. Search for patients by last name or ohip number. Print sticker for any patient in the database. Patient charts (pdf) are accessible from patient profile.</dd>
+    <dt>Visit management</dt>
+    <dd>- Slide a card in card reader when patient walks in and you will get patient's form prefilled with data read from the card, or existing patient profile. Card is validated in the process. Visit form in pdf format is available for printing.</dd>
+    <dt>Day Sheet</dt>
+    <dd> This page will show concise visit info for this date. You can use datepicker control to select date in the past and see visit info for that day</dd>
+    <dt>Billing</dt>
+    <dd> - Once diagnosis is established and procedures are assigned, visit cand be marked as ready for billing. These visits will be shown on billing page and available for export to EDT/CSV folder. Neutral CSV and standard MCEDT formats are supported. CSV is mostly
+used with 3-rd party billing packages, while MCEDT files can be sent directly to the Ministry of Health server.</dd>
+    <dt>Doctor management</dt>
+    <dd> - Add/delete/update doctor's records. Set active flag for doctors that work in the clinic </dd>
+    <dt>Procedures</dt>
+    <dd>  - Add/delete/update procedures. Set active flag for commonly used procedures to give them priority during selection. Code, price, units, description can all be updated.
+    <dt>Diagnoses</dt>
+    <dd> - Add/delete/update diagnoses. </dd>
+    <dt> Reports</dt>
+    <dd> - Generate variety of reports based on doctor(s) and time frame selected. Save reports into database. Generate pdf reports.  </dd>
+  </dl>
+  </ul>
