--- a/app/views/visits/edit.html.erb
+++ b/app/views/visits/edit.html.erb
@@ -2,4 +2,10 @@
 <% provide(:button_text, 'Save changes') %>
 <h1><%= @patient.full_name %> <%= @visit.entry_ts.strftime("%D %H:%M") %> : Update Visit Details</h1>
 
-    <%= render 'form' %>
+<div class="row justify-content-md-center">
+	<div class="col-md-10 col-md-offset-2">
+
+    	<%= render 'form' %>
+
+	</div>
+</div>
