--- a/app/views/visits/new.html.erb
+++ b/app/views/visits/new.html.erb
@@ -2,4 +2,10 @@
 <% provide(:button_text, 'Save') %>
 <h1>New Visit - <%= @patient.full_name %></h1>
 
+<div class="row justify-content-md-center">
+	<div class="col-md-10 col-md-offset-2">
+
     <%= render 'form' %>
+
+	</div>
+</div>
