billing changes, visit aside change

--- a/app/views/billings/_form.html.erb
+++ b/app/views/billings/_form.html.erb
@@ -22,12 +22,12 @@
   
   <%= f.label :Units, class: "col-md-4 control-label" %>
   <div class="col-md-6">
-  <%= f.select(:proc_units, $units ) %>
+  <%= f.select(:proc_units, UNITS ) %>
   </div>
 
   <%= f.label :Type, class: "col-md-4 control-label" %>
   <div class="col-md-6">
-  <%= f.select(:btype, $billing_types ) %>
+  <%= f.select(:btype, BILLING_TYPES ) %>
   </div>
 
   <div class="col-md-10">
