--- a/app/views/doctors/_form.html.erb
+++ b/app/views/doctors/_form.html.erb
@@ -79,7 +79,7 @@
 
   <div class="col-md-4">
   <%= f.label :'Province' %>
-  <%= f.select(:prov, $provinces ) %>
+  <%= f.select(:prov, PROVINCES ) %>
   </div>
 
   <div class="col-md-4">
