--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -14,7 +14,7 @@
   </div>
   
   <div class="col-md-1">
-  <%= f.select :hin_prov, $provinces %>
+  <%= f.select :hin_prov, PROVINCES %>
   </div>
   
   <div class="col-md-1">
@@ -40,7 +40,7 @@
 
   <%= f.label :Gender, class: "col-md-1 control-label" %>
   <div class="col-md-2">
-  <%= f.select(:sex, $sexes ) %>
+  <%= f.select(:sex, SEXES ) %>
   </div>
   
   <div class="col-md-12"> &nbsp; </div>
@@ -72,7 +72,7 @@
   </div>
   
   <div class="col-md-1">
-  <%= f.select(:prov, $provinces ) %>
+  <%= f.select(:prov, PROVINCES ) %>
   </div>
   
   <div class="col-md-1">
