--- a/app/views/visits/_visit.html.erb
+++ b/app/views/visits/_visit.html.erb
@@ -1,17 +1,10 @@
-<li id="visit-<%= visit.id %>">
-	<% if controller_name == "visits" %>
-	   <span class="patient"><%= link_to time_tag(visit.entry_ts), patient_visits_path %> </span>
-	<% else %>
-           <% if @patient %>
-	     <span class="patient"><%= link_to time_tag(visit.entry_ts), patient_visit_path(@patient,visit) %> </span>
-          <% end %> 
-	<% end %>
 
-	<span class="visit"><b>Doctor:</b> <%= visit.doctor.lname %></span>
-	<span class="visit"><b>Diagnosis:</b> <%= visit.diag_code %></span>
-	<span class="visit"><b>Status:</b> <%= VISIT_STATUSES.invert[visit.status] %></span>
-	<span class="visit"><b>Duration:</b> <%= visit.duration %> min</span>
-	<span class="visit"><b>Type:</b> <%= visit.vis_type %></span>
-</li>
-
+<tr>
+  <td><%= link_to visit.entry_ts.strftime("%Y-%m-%d %H:%M"), patient_visit_path(@patient,visit) %> </td>
+  <td><%= visit.doctor.lname %></td>
+  <td><%= visit.diag_scode %></td>
+  <td><%= visit.proc_codes %></td>
+  <td><%= VISIT_STATUSES.invert[visit.status] %></td>
+  <td><%= visit.vis_type %></td>
+</tr>
 
