--- a/app/views/doctors/_form.html.erb
+++ b/app/views/doctors/_form.html.erb
@@ -31,7 +31,7 @@
 
   <div class="col-md-4">
   <%= f.label :bills %>
-  <%= f.select :bills, $true_false %>
+  <%= f.select :bills, TRUE_FALSE %>
   </div>
 
   <div class="col-md-10"></div>
