--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -16,7 +16,7 @@ $gray-medium-light: #eaeaea;
 html,body {
   height: 100%;
   margin: 0;
-  padding-top: 15; 
+  padding-top: 0; 
 }
 
 .container {
@@ -28,13 +28,13 @@ table {
 }
 
 #header {
-   padding:10px;
+   padding:5px;
    height:50px;
 }
 
 #body {
-   padding:5px;
-   padding-bottom:5px;   /* Height of the footer */
+   padding:1px;
+   padding-bottom:1px;  
 }
 
 #footer {
@@ -84,14 +84,19 @@ h2 {
   margin-bottom: 20px;
   text-align: center;
   font-weight: normal;
-  color: $gray-light;
+/*  color: $gray-light; */
+}
+
+h3 {
+  font-size: 1.3em;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 p {
   font-size: 1.1em;
   line-height: 1.7em;
 }
-
 
 /* header */
 
@@ -149,14 +154,10 @@ footer {
 }
 
 .bottom_buttons {
-  clear: both;
-  float: left;
-  margin-top: 10px;
-  width: 100%;
-
-/*  bottom:40px;
-  position: fixed;
-*/
+  display:flex;
+  justify-content:flex-end;
+  align-items:center; 
+  padding-top: 15px;
 }
 
 /* sidebar */
@@ -226,7 +227,6 @@ input {
     border-bottom: 1px solid $gray-lighter;
   }
 }
-
 
 .padding-0{
     padding-right:0;
@@ -298,7 +298,7 @@ input {
     margin-right: 0.1em;
     padding: 0.1em 0.1em;
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
 }
 
 .pagination a:hover_ {
@@ -321,9 +321,21 @@ input {
 }
 
 #doc_in {
-  float: left;
-/*  font-size: 0.8em; */
-  position: fixed;
-}
+  position: absolute;
+  top: 100px;
+  left: 40px;
+  z-index:300;
 
+} 
+
+/*
+.btn-group { display: inline-block; }
+*/
+
+.alert {
+  margin-bottom: 1px;
+  height: 30px;
+  line-height:30px;
+  padding:0px 15px;
+}
 
