--- a/app/views/daysheet/index.html.erb
+++ b/app/views/daysheet/index.html.erb
@@ -3,11 +3,8 @@
 <% provide(:button_text, 'Save changes') %>
 
 <% if current_doctor && date == Date.today%>
-	<div id="doc_in"><small>Doctor in: Dr. <b><%= current_doctor.lname rescue '' %></b>  Est. Wait: <b><%= current_wait_time %></b> min.</small></div>
+      <div class="navbar-text"><small>Doctor in: Dr. <b><%= current_doctor.lname rescue '' %></b>  Est. Wait: <b><%= current_wait_time %></b> min.</small></div>
 <% end %>
-
-<% if @daysheet.count >0 %>
-	<h1> Visits for <%= date.to_s  %> (<%= @daysheet.count %>) </h1>
 
 <table class="tbl table-hover" >
   <thead>
@@ -17,10 +14,11 @@
           <th class="tbl_md">Patient</th>
           <th class="tbl_lsm">Health #</th>
           <th class="tbl_lsm">Ver.</th>
+          <th class="tbl_sm">Vis.Type</th>
           <th class="tbl_xmd">Diagnosis</th>
           <th class="tbl_xmd">Procedures</th>
           <th class="tbl_sm">Units</th>
-          <th class="tbl_sm">Type</th>
+          <th class="tbl_sm">Bil.Type</th>
           <th class="tbl_sm">Status</th>
           <% if current_user.admin?  %>
           <th class="tbl_sm"> </th>
@@ -36,7 +34,7 @@
   </tbody>
 </table>
 
-<%= will_paginate(@daysheet) %>
-
-<% end %>
+<div class="bottom_buttons ">
+<%= will_paginate @daysheet, class: "btn" %> 
+</div>
 
