--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer>
   <small>
     The <a href="<%= project_url %>"><%= full_title %></a> project
-    by <a href="project_url">Stoney Creek Walk In Clinic</a> - All rights reserved
+    by <a href="project_url">Stoney Creek Walk In Clinic</a> &copy; 2017 - All rights reserved
   </small>
   <nav>
     <ul>
