--- a/app/views/visits/show.html.erb
+++ b/app/views/visits/show.html.erb
@@ -10,13 +10,15 @@
     <section class="user_info">
       <h1>
 	   <pre>
+		<b>Visit Type:</b> <%= VISIT_TYPES.invert[@visit.vis_type] %>
 		<b>Doctor</b> :    <%= @visit.doctor.lname %>
 		<b>Diagnosis</b> : <%= @visit.diag_code %> : <%= diag.descr rescue '' %>
 		<b>Procedure(s)</b> : <%=  @visit.proc_codes %>
-		<b>Billing Type(s) </b>: <%= @visit.bil_types %> 
-		<b>Visit Type:</b> <%= VISIT_TYPES.invert[@visit.vis_type] %>
+		<b>Billing Type(s) </b>: <%= BILLING_TYPES.invert[@visit.bil_type] %>, <%= BILLING_TYPES.invert[@visit.bil_type2] %>
+		<b>Units </b>: <%= @visit.units %>, <%= @visit.units2 %>
 		<b>Duration </b>: <%= @visit.duration %> minutes
 		<b>Status </b>: <%= VISIT_STATUSES.invert[@visit.status] %> 
+		<b>Total fee </b>: <%=  sprintf '$%.2f',@visit.total_fee %>
 		<b>Entry by </b>: <%= @visit.entry_by %>
 		<b>Entered at </b>: <%= @visit.entry_ts %>
 		<b>Notes </b>: <%= @visit.notes %>	     
@@ -24,13 +26,16 @@
       </h1>
     </section>
 
-		   <p>
-<% if current_user.admin?  %>
-            <%= button_to "Edit Visit", edit_patient_visit_path(@patient), class: "btn btn-primary", :method => "get" %>
-<% end %>
+<p>
+  <%= button_to "Edit Visit", edit_patient_visit_path(@patient), class: "btn btn-primary", :method => "get" %>
+<p>
+ <%= button_to "Print Visit Form", visitform_patient_visit_path(@patient), class: "btn btn-primary", method: 'get'  %>
 
-    <p>
-    <%= button_to "Print Visit Form", visitform_patient_visit_path(@patient), class: "btn btn-primary", method: 'get'  %>
+ <% if @visit._3rd_index %> 
+<p>
+ <%= button_to "Print Receipt", receipt_patient_visit_path(@patient), class: "btn btn-primary", method: 'get'  %>
+ <% end %>
+
   </aside>
 
 </div>
